More code clean-up and changes: • Added IDs to "tag" dialogs so dialogs will only respond to their own events (useful when a dialog opens another dialog) • Added flags to ensure each that the same dialog cannot be opened more than once • Fixed a potential race condition with the dialog "singleton" flags • Switched the drag-content flag from false to true on the menu view so the side navigation can be accessed via a swipe • Enabled/fixed 10 taps on the logo in the about view to enable developer mode • The PIN entry view now only shows the PIN and numpad controls in column mode if the device screen is a landscape phone, otherwise it they'll be in a single column • Added a developer tool option to set the PIN timeout greater than 10 minutes in the past, useful for testing PIN entry dialog on application launch

--- a/Sample-App/templates/About.html
+++ b/Sample-App/templates/About.html
@@ -9,7 +9,7 @@
         <ion-list class="card">
 
             <ion-item class="item-avatar">
-                <img src="images/about-icon.png">
+                <img src="images/about-icon.png" ng-click="controller.logo_click()">
                 <h2>{{viewModel.applicationName}}</h2>
                 <p>Version: {{viewModel.versionString}}</p>
                 <p>Built: {{viewModel.timestamp}}</p>
