--- a/Sample-App/templates/PinEntry.html
+++ b/Sample-App/templates/PinEntry.html
@@ -6,7 +6,7 @@
 
     <ion-content has-header="true" padding="false" scroll="false" class="pin-entry content-vertical-center">
 
-        <div class="pin-entry-portrait portrait">
+        <div class="pin-entry-portrait phone-portrait-tablet-both">
 
             <div class="row pin-entry-input">
                 <div class="col col-25">
@@ -87,7 +87,7 @@
 
         </div>
 
-        <div class="pin-entry-landscape landscape">
+        <div class="pin-entry-landscape phone-landscape">
 
             <div class="row">
                 <div class="col col-50 content-vertical-center">
