--- a/Sample-App/templates/Menu.html
+++ b/Sample-App/templates/Menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus>
 
-    <ion-pane ion-side-menu-content drag-content="false">
+    <ion-pane ion-side-menu-content drag-content="true">
 
         <ion-nav-bar class="bar-positive nav-title-slide-ios7">
             <ion-nav-back-button class="button-clear nav-back-button">
