More code clean-up and changes: • Organized the controllers, view models, and templates with directories to group them by area • Changed the routes to match the new structure • Moved the dialog ID "tagging" to the creation promise call to reduce the number of lines

--- a/Sample-App/templates/Menu.html
+++ b/Sample-App/templates/Menu.html
@@ -32,7 +32,7 @@
                     Reorder Categories
                 </ion-item>
 
-                <ion-item class="item-icon-left menu-close nav-clear" href="#/app/settings">
+                <ion-item class="item-icon-left menu-close nav-clear" href="#/app/settings/list">
                     <i class="icon ion-android-mixer"></i>
                     Settings
                 </ion-item>
