--- a/Sample-App/templates/Settings/Logs.html
+++ b/Sample-App/templates/Settings/Logs.html
@@ -14,7 +14,7 @@
                     {{logGroup}} - {{logEntries.length}} Errors
                 </div>
 
-                <ion-item ng-repeat="logEntry in logEntries" href="#/app/logEntry/{{logEntry.id}}" class="item-icon-left item-icon-right">
+                <ion-item ng-repeat="logEntry in logEntries" href="#/app/settings/log-entry/{{logEntry.id}}" class="item-icon-left item-icon-right">
                     <i class="icon ion-{{logEntry.iconType}}"></i>
                     <i class="icon ion-ios7-arrow-forward"></i>
                     {{logEntry.time}} - {{logEntry.message}}
