--- a/Sample-App/templates/Settings/Settings-List.html
+++ b/Sample-App/templates/Settings/Settings-List.html
@@ -7,31 +7,31 @@
     <ion-content class="has-header">
         <ion-list>
 
-            <ion-item href="#/app/cloud-sync" class="item-icon-left item-icon-right" ng-show="viewModel.isDebugMode || viewModel.isDeveloperMode">
+            <ion-item href="#/app/settings/cloud-sync" class="item-icon-left item-icon-right">
                 <i class="icon ion-ios7-cloud-upload-outline"></i>
                 <i class="icon ion-ios7-arrow-forward"></i>
                 Cloud Sync
             </ion-item>
 
-            <ion-item href="#/app/configure-pin" class="item-icon-left item-icon-right">
+            <ion-item href="#/app/settings/configure-pin" class="item-icon-left item-icon-right">
                 <i class="icon ion-ios7-locked-outline"></i>
                 <i class="icon ion-ios7-arrow-forward"></i>
                 Configure PIN
             </ion-item>
 
-            <ion-item href="#/app/logs" class="item-icon-left item-icon-right">
+            <ion-item href="#/app/settings/logs" class="item-icon-left item-icon-right">
                 <i class="icon ion-ios7-copy-outline"></i>
                 <i class="icon ion-ios7-arrow-forward"></i>
                 Logs
             </ion-item>
 
-            <ion-item href="#/app/developer" class="item-icon-left item-icon-right" ng-show="viewModel.isDebugMode || viewModel.isDeveloperMode">
+            <ion-item href="#/app/settings/developer" class="item-icon-left item-icon-right" ng-show="viewModel.isDebugMode || viewModel.isDeveloperMode">
                 <i class="icon ion-android-developer"></i>
                 <i class="icon ion-ios7-arrow-forward"></i>
                 Development Tools
             </ion-item>
 
-            <ion-item href="#/app/about" class="item-icon-left item-icon-right">
+            <ion-item href="#/app/settings/about" class="item-icon-left item-icon-right">
                 <i class="icon ion-ios7-information-outline"></i>
                 <i class="icon ion-ios7-arrow-forward"></i>
                 About
