Added samples for $stateParams, directives, and filters • Added a category view that illustrates how to use values from the route URL via $stateParams • Added a icon-panel directive that illustrates how to build a strongly-typed directives • Added the "thousand" filter that illustrates how to be a build a strongly-typed filter • Added the Cloud Sync settings view which illustrates how to use a directive and filter • Added initialize and destroy events to the BaseController

--- a/Sample-App/css/style.css
+++ b/Sample-App/css/style.css
@@ -112,3 +112,15 @@
 .pin-entry-numpad button {
 	font-size: 28pt;
 }
+
+/** Icon Panel Directive *************************************************************************/
+
+.icon-panel {
+	padding-top: 75px;
+	text-align: center;
+}
+
+.icon-panel .icon-container {
+	text-align: center;
+	font-size: 120pt;
+}
