--- a/Sample-App/templates/Menu.html
+++ b/Sample-App/templates/Menu.html
@@ -12,7 +12,7 @@
 
     </ion-pane>
 
-    <ion-side-menu side="left">
+    <ion-side-menu side="left" expose-aside-when="(min-width: 768px) and (orientation: landscape)">
         <ion-content scroll="true">
 
             <ion-list>
