--- a/Sample-App/templates/Category.html
+++ b/Sample-App/templates/Category.html
@@ -1,7 +1,7 @@
 ﻿<ion-view title="Category {{viewModel.categoryNumber}}">
 
     <ion-nav-buttons side="left">
-        <button menu-toggle="left" class="button icon ion-navicon"></button>
+        <button menu-toggle="left" class="button icon ion-navicon phone-both-tablet-portrait"></button>
     </ion-nav-buttons>
 
     <ion-content class="has-header" scrolling="true" padding="true">
