--- a/Sample-App/templates/Settings/Settings-List.html
+++ b/Sample-App/templates/Settings/Settings-List.html
@@ -1,7 +1,7 @@
 <ion-view title="Settings">
 
     <ion-nav-buttons side="left">
-        <button menu-toggle="left" class="button icon ion-navicon"></button>
+        <button menu-toggle="left" class="button icon ion-navicon phone-both-tablet-portrait"></button>
     </ion-nav-buttons>
 
     <ion-content class="has-header">
