Upgraded Ionic framework from version 1.0.0-beta13 to 1.0.0-beta14 • Added Ionic's view_* events to BaseController • Swept all controllers to use view_beforeEnter() instead of initialize() • Swept all dialogs to use dialog_shown() instead of initialize() • Swept all title attributes to view-title • Removed the nav-clear class which was removed in beta 14 • Fixed styling issues in the About view

--- a/Sample-App/templates/Category.html
+++ b/Sample-App/templates/Category.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Category {{viewModel.categoryNumber}}">
+﻿<ion-view view-title="Category {{viewModel.categoryNumber}}">
 
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button icon ion-navicon phone-both-tablet-portrait"></button>
