--- a/Sample-App/templates/Settings/Configure-Pin.html
+++ b/Sample-App/templates/Settings/Configure-Pin.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Configure PIN">
+﻿<ion-view view-title="Configure PIN">
 
     <ion-nav-buttons side="left">
     </ion-nav-buttons>
