--- a/Sample-App/templates/Settings/Developer.html
+++ b/Sample-App/templates/Settings/Developer.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Development Tools">
+﻿<ion-view view-title="Development Tools">
 
     <ion-nav-buttons side="left">
     </ion-nav-buttons>
