--- a/Sample-App/templates/Settings/Logs.html
+++ b/Sample-App/templates/Settings/Logs.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="Logs">
+﻿<ion-view view-title="Logs">
 
     <ion-nav-buttons side="right">
         <button class="button icon ion-trash-a" ng-click="controller.clearLogs()"></button>
