--- a/Sample-App/templates/Settings/Settings-List.html
+++ b/Sample-App/templates/Settings/Settings-List.html
@@ -1,4 +1,4 @@
-<ion-view title="Settings">
+<ion-view view-title="Settings">
 
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button icon ion-navicon phone-both-tablet-portrait"></button>
