--- a/Sample-App/templates/Blank.html
+++ b/Sample-App/templates/Blank.html
@@ -1,4 +1,4 @@
-﻿<ion-view title="">
+﻿<ion-view view-title="">
 
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button icon ion-navicon phone-both-tablet-portrait"></button>
