--- a/Sample-App/templates/Settings/About.html
+++ b/Sample-App/templates/Settings/About.html
@@ -1,25 +1,25 @@
-﻿<ion-view title="About">
+﻿<ion-view view-title="About">
 
     <ion-nav-buttons side="left">
     </ion-nav-buttons>
 
     <ion-content class="has-header about-view" scrolling="true" padding="true">
 
-        <ion-list class="card">
+        <div class="list card">
 
-            <ion-item class="item-avatar">
+            <div class="item item-avatar">
                 <img src="images/about-icon.png" ng-click="controller.logo_click()">
                 <h2>{{viewModel.applicationName}}</h2>
                 <p>Version: {{viewModel.versionString}}</p>
                 <p>Built: {{viewModel.timestamp}}</p>
-            </ion-item>
+            </div>
 
-            <ion-item class="item-body">
+            <div class="item item-body">
                 <p>Created by Justin Unterreiner.</p>
-                <p>Copyright 2014. All rights reserved.</p>
-            </ion-item>
+                <p>Copyright 2015. All rights reserved.</p>
+            </div>
 
-            <ion-item class="tabs tabs-secondary tabs-icon-left">
+            <div class="item tabs tabs-secondary tabs-icon-left">
                 <a class="tab-item" href="#/app/copyright-info">
                     <i class="icon ion-information-circled"></i>
                     Copyright Info
@@ -32,9 +32,9 @@
                     <i class="icon ion-social-github"></i>
                     Github Repo
                 </a>
-            </ion-item>
+            </div>
 
-        </ion-list>
+        </div>
 
     </ion-content>
 
