--- a/Sample-App/templates/Settings/Log-Entry.html
+++ b/Sample-App/templates/Settings/Log-Entry.html
@@ -47,11 +47,11 @@
 
             <div class="item tabs tabs-secondary tabs-icon-left">
                 <a class="tab-item" ng-click="controller.copy()">
-                    <i class="icon ion-ios7-copy-outline"></i>
+                    <i class="icon ion-ios-copy-outline"></i>
                     Copy
                 </a>
                 <a class="tab-item" ng-click="controller.email()">
-                    <i class="icon ion-ios7-email-outline"></i>
+                    <i class="icon ion-ios-email-outline"></i>
                     E-mail
                 </a>
             </div>
