--- a/Sample-App/templates/Menu.html
+++ b/Sample-App/templates/Menu.html
@@ -4,7 +4,7 @@
 
         <ion-nav-bar class="bar-positive nav-title-slide-ios7">
             <ion-nav-back-button class="button-clear nav-back-button">
-                <i class="ion-ios7-arrow-back"></i> Back
+                <i class="ion-ios-arrow-back"></i> Back
             </ion-nav-back-button>
         </ion-nav-bar>
 
@@ -33,7 +33,7 @@
                 </ion-item>
 
                 <ion-item class="item-icon-left menu-close" href="#/app/settings/list">
-                    <i class="icon ion-android-mixer"></i>
+                    <i class="icon ion-android-settings"></i>
                     Settings
                 </ion-item>
 
