--- a/Sample-App/templates/Settings/Settings-List.html
+++ b/Sample-App/templates/Settings/Settings-List.html
@@ -8,32 +8,32 @@
         <ion-list>
 
             <ion-item href="#/app/settings/cloud-sync" class="item-icon-left item-icon-right">
-                <i class="icon ion-ios7-cloud-upload-outline"></i>
-                <i class="icon ion-ios7-arrow-forward"></i>
+                <i class="icon ion-ios-cloud-upload-outline"></i>
+                <i class="icon ion-ios-arrow-forward"></i>
                 Cloud Sync
             </ion-item>
 
             <ion-item href="#/app/settings/configure-pin" class="item-icon-left item-icon-right">
-                <i class="icon ion-ios7-locked-outline"></i>
-                <i class="icon ion-ios7-arrow-forward"></i>
+                <i class="icon ion-ios-locked-outline"></i>
+                <i class="icon ion-ios-arrow-forward"></i>
                 Configure PIN
             </ion-item>
 
             <ion-item href="#/app/settings/logs" class="item-icon-left item-icon-right">
-                <i class="icon ion-ios7-copy-outline"></i>
-                <i class="icon ion-ios7-arrow-forward"></i>
+                <i class="icon ion-ios-copy-outline"></i>
+                <i class="icon ion-ios-arrow-forward"></i>
                 Logs
             </ion-item>
 
             <ion-item href="#/app/settings/developer" class="item-icon-left item-icon-right" ng-show="viewModel.isDebugMode || viewModel.isDeveloperMode">
-                <i class="icon ion-android-developer"></i>
-                <i class="icon ion-ios7-arrow-forward"></i>
+                <i class="icon ion-code-working"></i>
+                <i class="icon ion-ios-arrow-forward"></i>
                 Development Tools
             </ion-item>
 
             <ion-item href="#/app/settings/about" class="item-icon-left item-icon-right">
-                <i class="icon ion-ios7-information-outline"></i>
-                <i class="icon ion-ios7-arrow-forward"></i>
+                <i class="icon ion-ios-information-outline"></i>
+                <i class="icon ion-ios-arrow-forward"></i>
                 About
             </ion-item>
 
