--- a/Sample-App/www/templates/Settings/Logs.html
+++ b/Sample-App/www/templates/Settings/Logs.html
@@ -15,7 +15,7 @@
 
                 <ion-item ng-repeat="logEntry in logEntries" href="#/app/settings/log-entry/{{logEntry.id}}" class="item-icon-left item-icon-right">
                     <i class="icon ion-{{logEntry.iconType}}"></i>
-                    <i class="icon ion-ios7-arrow-forward"></i>
+                    <i class="icon ion-ios-arrow-forward"></i>
                     {{logEntry.time}} - {{logEntry.message}}
                 </ion-item>
 
