--- a/Sample-App/www/templates/Dialogs/Pin-Entry.html
+++ b/Sample-App/www/templates/Dialogs/Pin-Entry.html
@@ -71,7 +71,7 @@
                 <div class="row">
                     <div class="col col-33">
                         <button class="button button-block button-positive" ng-click="controller.back_click()" ng-show="viewModel.showBackButton">
-                            <i class="icon ion-android-system-back"></i>
+                            <i class="icon ion-android-arrow-back"></i>
                         </button>
                     </div>
                     <div class="col col-33">
@@ -156,7 +156,7 @@
                         <div class="row">
                             <div class="col col-33">
                                 <button class="button button-block button-positive" ng-click="controller.back_click()" ng-show="viewModel.showBackButton">
-                                    <i class="icon ion-android-system-back"></i>
+                                    <i class="icon ion-android-arrow-back"></i>
                                 </button>
                             </div>
                             <div class="col col-33">
