Changed "Response" to "Body" for HTTP log entries; resolves #5

--- a/Sample-App/www/templates/Settings/Log-Entry.html
+++ b/Sample-App/www/templates/Settings/Log-Entry.html
@@ -42,7 +42,7 @@
                 <p>Status: {{viewModel.httpStatus}}</p>
                 <p>Status Text: {{viewModel.httpStatusText}}</p>
                 <p>Headers: {{viewModel.httpHeaders}}</p>
-                <p>Response: {{viewModel.httpBody}}</p>
+                <p>Body: {{viewModel.httpBody}}</p>
             </div>
 
             <div class="item tabs tabs-secondary tabs-icon-left">
