Fixed the format string for the e-mail link

--- a/Sample-App/www/templates/Settings/Log-Entry.html
+++ b/Sample-App/www/templates/Settings/Log-Entry.html
@@ -47,11 +47,11 @@
             </div>
 
             <div class="item tabs tabs-secondary tabs-icon-left">
-                <a class="tab-item" ng-click="controller.copy()">
+                <a class="tab-item" ng-click="controller.copy_click()">
                     <i class="icon ion-ios-copy-outline"></i>
                     Copy
                 </a>
-                <a class="tab-item" ng-click="controller.email()">
+                <a class="tab-item" ng-click="controller.email_click()">
                     <i class="icon ion-ios-email-outline"></i>
                     E-mail
                 </a>
