Added size attribute for icon-panel and removed implicit top padding

--- a/Sample-App/www/templates/Category.html
+++ b/Sample-App/www/templates/Category.html
@@ -6,7 +6,7 @@
 
     <ion-content class="has-header" scrolling="true" padding="true">
 
-        <icon-panel icon="ios-pricetags-outline" text="Category {{viewModel.categoryNumber}}"></icon-panel>
+        <icon-panel icon="ion-ios-pricetags-outline" text="Category {{viewModel.categoryNumber}}"></icon-panel>
 
     </ion-content>
 
