Implemented onboarding; resolves #24

--- a/Sample-App/www/templates/Settings/Developer.html
+++ b/Sample-App/www/templates/Settings/Developer.html
@@ -51,6 +51,7 @@
             <button class="button button-block button-positive" ng-click="controller.addModulesToGlobalScope_click()">Add Modules to Global Scope</button>
             <button class="button button-block button-positive" ng-click="controller.setRequirePinThreshold_click()">Set Require PIN Threshold</button>
             <button class="button button-block button-positive" ng-click="controller.resetPinTimeout_click()">Reset PIN Entry Timeout</button>
+            <button class="button button-block button-positive" ng-click="controller.reEnableOnboarding_click()">Re-enable Onboarding</button>
         </div>
 
         <div class="list card">
