Removed the unneeded scrolling=true attribute; resolves #28

--- a/Sample-App/www/templates/Category.html
+++ b/Sample-App/www/templates/Category.html
@@ -4,7 +4,7 @@
         <button menu-toggle="left" class="button icon ion-navicon phone-both-tablet-portrait"></button>
     </ion-nav-buttons>
 
-    <ion-content class="has-header" scrolling="true" padding="true">
+    <ion-content class="has-header" padding="true">
 
         <icon-panel icon="ion-ios-pricetags-outline" text="Category {{viewModel.categoryNumber}}"></icon-panel>
 
