--- a/Sample-App/www/templates/Settings/About.html
+++ b/Sample-App/www/templates/Settings/About.html
@@ -3,7 +3,7 @@
     <ion-nav-buttons side="left">
     </ion-nav-buttons>
 
-    <ion-content class="has-header about-view" scrolling="true" padding="true">
+    <ion-content class="has-header about-view" padding="true">
 
         <div class="list card">
 
