--- a/Sample-App/www/templates/Settings/Configure-Pin.html
+++ b/Sample-App/www/templates/Settings/Configure-Pin.html
@@ -3,7 +3,7 @@
     <ion-nav-buttons side="left">
     </ion-nav-buttons>
 
-    <ion-content class="has-header" scrolling="true" padding="true">
+    <ion-content class="has-header" padding="true">
 
         <p class="configure-pin-lock-icon">
             <i class="icon ion-locked"></i>
