--- a/Sample-App/www/templates/Settings/Developer.html
+++ b/Sample-App/www/templates/Settings/Developer.html
@@ -3,7 +3,7 @@
     <ion-nav-buttons side="left">
     </ion-nav-buttons>
 
-    <ion-content class="has-header" scrolling="true">
+    <ion-content class="has-header">
 
         <div class="list card">
             <div class="item item-divider">HTTP API</div>
