Switch hrefs to ui-srefs; resolves #29

--- a/Sample-App/www/templates/Menu.html
+++ b/Sample-App/www/templates/Menu.html
@@ -32,7 +32,7 @@
                     Reorder Categories
                 </ion-item>
 
-                <ion-item class="item-icon-left menu-close" href="#/app/settings/list">
+                <ion-item class="item-icon-left menu-close" ui-sref="app.settings-list">
                     <i class="icon ion-android-settings"></i>
                     Settings
                 </ion-item>
