Rename MenuController to RootController and clean up event constants; resolves #40

--- a/Sample-App/www/templates/Root.html
+++ b/Sample-App/www/templates/Root.html
@@ -8,7 +8,7 @@
             </ion-nav-back-button>
         </ion-nav-bar>
 
-        <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
+        <ion-nav-view name="root-view" animation="slide-left-right"></ion-nav-view>
 
     </ion-pane>
 
