--- a/Sample-App/www/templates/Settings/Developer.html
+++ b/Sample-App/www/templates/Settings/Developer.html
@@ -182,7 +182,7 @@
             <div class="item item-divider item-icon-right">
                 File System I/O
                 <i class="icon ion-ios-help-outline"
-                    ng-click="controller.help_click('Used to test the native file plugin.')"></i>
+                    ng-click="controller.help_click('Used to test the native file plugin; this requires cordova-plugin-file.')"></i>
             </div>
 
             <label class="item item-text-wrap">
