Side menu no longer shows on tablets in landscape during on-boarding; fixes #31

--- a/Sample-App/www/templates/Root.html
+++ b/Sample-App/www/templates/Root.html
@@ -12,7 +12,9 @@
 
     </ion-pane>
 
-    <ion-side-menu side="left" expose-aside-when="(min-width: 768px) and (orientation: landscape)">
+    <ion-side-menu side="left"
+        expose-aside-when="{{controller.UiHelper.sideMenuMediaQuery}}">
+
         <ion-content scroll="true">
 
             <ion-list>
